# QRCrypt

./: .gitignore  Cargo.toml  PLAUSIBLE_DENIABILITY.md  README.md  WINDOWS_RELEASE.md  rustc-ice-2025-09-07T18_32_52-1762907.txt
.github/: AUTO-TAGGING.md  AUTO-VERSIONING.md  RELEASES.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
scripts/: auto-version.sh  bump-version.sh  test-auto-tag.sh
src/: cli.rs  crypto.rs  error.rs  main.rs  qr.rs  scanner.rs  shamir.rs  utils.rs
