[package]
name = "qrcrypt"
version = "0.96.0"
edition = "2021"
authors = ["VBLimits <7929699+vblimits@users.noreply.github.com>"]
description = "Secure storage of crypto wallet seed phrases in encrypted QR codes with Shamir's Secret Sharing"
license = "MIT"
repository = "https://github.com/yourusername/qrcrypt"

[[bin]]
name = "qrcrypt"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
qrcode = "0.12"
image = "0.24"
rpassword = "7.0"
hex = "0.4"
base64 = "0.21"
zeroize = { version = "1.6", features = ["zeroize_derive"] }

# Cryptography
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"

# Shamir's Secret Sharing - using vsss-rs instead of vulnerable sharks
vsss-rs = "4.3"
bincode = "1.3"

# BIP39 word list validation
bip39 = "2.0"

# QR code reading
rqrr = "0.6"

# Text rendering - using maintained alternatives
imageproc = "0.25"
ab_glyph = "0.2"

